--- a/styles.css
+++ b/styles.css
@@ -11465,3 +11465,12 @@ h1, h2, h3, h4, h5, h6 {
   color: #2a2a2a;
   text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.5);
 }
+/* --- CUSTOM BACKGROUND IMAGE --- */
+body {
+  background-image: url("../assets/img/background.jepg") !important;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-color: transparent !important;
+}
